--- a/custom.scss
+++ b/custom.scss
@@ -1,2 +1,3 @@
 @import "./node_modules/bootstrap/dist/css/bootstrap";
 @import "./node_modules/jquery-ui-css/jquery-ui";
+@import "./node_modules/intro.js/introjs";
